--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</tr>
 		<tr>
 			<th>
-				<td>Left sidebar</td>
+				<td>Left sidebar1</td>
 				<td colspan="3">main column</td>
 			</th>
 		</tr>
